force-app/main/default/objects/Product2/fields/Compatibility__c.field-meta.xml
<CustomField>
    <fullName>Compatibility__c</fullName>
    <label>Compatibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Device_List</valueSetName>
    </valueSet>
</CustomField>