force-app/main/default/objects/Product2/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Device__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Model</valueSetName>
    </valueSet>
</CustomField>